# zw_brain/entry/rest/openapi.json
@@ -6481,7 +6481,8 @@
                 "required": [
                   "resource_code",
                   "test_result",
-                  "confirmed"
+                  "confirmed",
+                  "evidence_json"
                 ],
                 "properties": {
                   "resource_code": {
@@ -6504,6 +6505,9 @@
                       "passed",
                       "failed"
                     ]
+                  },
+                  "evidence_json": {
+                    "type": "object"
                   },
                   "binding_code": {
                     "type": "string"
